@@ -618,6 +618,28 @@ return|;
 block|}
 block|}
 specifier|public
+name|IvyAntSettings
+parameter_list|()
+block|{
+name|super
+argument_list|()
+expr_stmt|;
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+name|this
+argument_list|)
+expr_stmt|;
+name|Thread
+operator|.
+name|dumpStack
+argument_list|()
+expr_stmt|;
+block|}
+specifier|public
 name|File
 name|getFile
 parameter_list|()
@@ -756,18 +778,17 @@ argument_list|(
 name|id
 argument_list|)
 operator|&&
+operator|!
 name|getProject
 argument_list|()
 operator|.
 name|getReferences
 argument_list|()
 operator|.
-name|get
+name|containsKey
 argument_list|(
 name|id
 argument_list|)
-operator|==
-literal|null
 condition|)
 block|{
 comment|// register ourselfs as default settings, just in case the id attribute is not set
@@ -960,6 +981,27 @@ name|id
 operator|=
 name|id
 expr_stmt|;
+if|if
+condition|(
+name|getProject
+argument_list|()
+operator|!=
+literal|null
+condition|)
+block|{
+name|getProject
+argument_list|()
+operator|.
+name|addReference
+argument_list|(
+name|this
+operator|.
+name|id
+argument_list|,
+name|this
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 specifier|public
 name|String
