@@ -39,4 +39,10 @@
 	  	<ivy:configure settingsId="testUnnecessaryDefaultIvyInstance" file="test/repositories/ivysettings.xml" override="true" />
 	  	<ivy:cachepath settingsRef="testUnnecessaryDefaultIvyInstance" file="test/java/org/apache/ivy/ant/ivy-simple.xml" pathid="ptest" />
 	  </target>
+	
+  <target name="testSettingsWithPropertyAsId">
+  	<property name="my.property" value="whatever" />
+  	<ivy:settings id="${my.property}" file="test/repositories/ivysettings.xml" />
+  	<ivy:resolve settingsRef="${my.property}" file="test/java/org/apache/ivy/ant/ivy-simple.xml" />
+  </target>
 </project>
