@@ -191,6 +191,57 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+specifier|public
+name|void
+name|testSettingsWithIdIvyInstance
+parameter_list|()
+block|{
+name|executeTarget
+argument_list|(
+literal|"testSettingsWithPropertyAsId"
+argument_list|)
+expr_stmt|;
+name|ResolveReport
+name|report
+init|=
+operator|(
+name|ResolveReport
+operator|)
+name|getProject
+argument_list|()
+operator|.
+name|getReference
+argument_list|(
+literal|"ivy.resolved.report"
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|report
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|report
+operator|.
+name|hasError
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|report
+operator|.
+name|getDependencies
+argument_list|()
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 
